--- a/requirements.txt
+++ b/requirements.txt
@@ -1,10 +1,21 @@
 asgiref==3.2.10
 beautifulsoup4==4.9.2
+circuits==3.2
 Django==3.1.2
 django-bootstrap4==2.2.0
+django-filter==2.4.0
+django-rest-auth==0.9.5
+django-rest-authtoken==2.1.3
+djangorestframework==3.12.1
+djangorestframework-jwt==1.11.0
+djangorestframework-simplejwt==4.4.0
+graphics.py==5.0.1.post1
 importlib-metadata==1.7.0
+Markdown==3.2.2
+PyJWT==1.7.1
 python-decouple==3.3
 pytz==2020.1
+six==1.15.0
 soupsieve==2.0.1
 sqlparse==0.3.1
 StringGenerator==0.3.4
